--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
-    <!-- HEADER -->
+    <!-------------- HEADER ---------->
     <header class="header">
       <div class="container">
         <nav class="nav-main">
-          <a href="./index.html" class="logo-start no-underline"
-            >Web<span class="header-logo-end no-underline">Studio</span>
+          <a href="./index.html" class="logo no-underline"
+            >Web<span class="logo__header no-underline">Studio</span>
           </a>
           <ul class="header-nav-list no-marker">
             <li class="header-nav-item">
@@ -62,12 +62,14 @@
     <main>
       <!-- Первая секция герой -->
       <section class="hero section">
-        <div class="container">
-          <h1 class="hero-title">
+        <div class="hero__container">
+          <h1 class="hero__title">
             Эффективные решения <br />
             для вашего бизнеса
           </h1>
-          <button class="hero-button pointer" type="button" data-modal-open>Заказать услугу</button>
+          <button class="hero__button pointer" type="button" data-modal-open>
+            Заказать услугу
+          </button>
         </div>
       </section>
 
@@ -385,8 +387,8 @@
     <footer class="section-footer">
       <div class="container footer">
         <div class="footer-contacts">
-          <a href="./index.html" class="logo-start no-underline footer-logo"
-            >Web<span class="footer-logo-end no-underline">Studio</span></a
+          <a href="./index.html" class="logo no-underline footer-logo"
+            >Web<span class="logo__footer no-underline">Studio</span></a
           >
           <address class="normal-style">
             <ul class="no-marker">
