--- a/portfolio.html
+++ b/portfolio.html
@@ -25,8 +25,8 @@
     <header class="header">
       <div class="container">
         <nav class="nav-main">
-          <a href="./index.html" class="logo-start no-underline"
-            >Web<span class="header-logo-end no-underline">Studio</span>
+          <a href="./index.html" class="logo no-underline"
+            >Web<span class="logo__header no-underline">Studio</span>
           </a>
           <ul class="header-nav-list no-marker">
             <li class="header-nav-item">
@@ -284,8 +284,8 @@
     <footer class="section-footer">
       <div class="container footer">
         <div class="footer-contacts">
-          <a href="./index.html" class="logo-start no-underline footer-logo"
-            >Web<span class="footer-logo-end no-underline">Studio</span></a
+          <a href="./index.html" class="logo no-underline footer-logo"
+            >Web<span class="logo__footer no-underline">Studio</span></a
           >
           <address class="normal-style">
             <ul class="no-marker">
